# ntt-data-challenge

./: .gitignore  ARCHITECTURE.md  README.md  predictions.csv
knowledge/: glossary.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_00.提案_提案書_final.pptx.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_00.提案_提案書_v1.pptx.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_01.契約_契約書.docx.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_02.計画_スケジュール.xlsx.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_03.データ_train.csv.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_03.データ_カラム説明.md.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_04.分析_analysis_outputs_experiments_leaderboard.csv.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_04.分析_analysis_outputs_metrics.json.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_04.分析_analysis_project_README.md.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_04.分析_analysis_project_configs_project_config.json.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_04.分析_analysis_project_data_train.csv.md  share_共有ドライブ_プロジェクト_京橋信用ソリューションズ株式会社_04.分析_analysis_project_data_カラム説明.md.md  (+400 more)
python/api/: agent.py  (+1 more)
raw_drive/share/共有ドライブ/プロジェクト/京橋信用ソリューションズ株式会社/04.分析/analysis_project/: README.md  pyproject.toml  requirements.txt
raw_drive/share/共有ドライブ/プロジェクト/京橋信用ソリューションズ株式会社/04.分析/analysis_project/configs/: project_config.json
raw_drive/share/共有ドライブ/プロジェクト/京橋信用ソリューションズ株式会社/04.分析/analysis_project/notebooks/: 01_eda.ipynb
raw_drive/share/共有ドライブ/プロジェクト/京橋信用ソリューションズ株式会社/04.分析/analysis_project/scripts/: run_train.py
raw_drive/share/共有ドライブ/プロジェクト/京橋信用ソリューションズ株式会社/04.分析/analysis_project/src/: evaluate.py  infer.py  modeling.py
(+206 files in other folders)
