[project]
name = "analysis-project-manual"
version = "0.1.0"
description = "Generated practical analysis project"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.0",
]

[tool.uv]
package = false
